# coffer

./: .drone.yml  .gitattributes  .gitignore  Cargo.toml  Design.org  Makefile  README.md  TODO.org
coffer-client/: Cargo.toml
coffer-client/src/: main.rs
coffer-common/: Cargo.toml
coffer-common/src/: certificate.rs  coffer.rs  keyring.rs  lib.rs
coffer-companion/: Cargo.toml
coffer-companion/src/: certificate.rs  client.rs  encrypt.rs  generate.rs  main.rs
coffer-server/: Cargo.toml
coffer-server/src/: coffer_map.rs  comm.rs  command_parser.rs  main.rs  protocol.rs  server.rs
coffer-server/src/coffer/: coffer.rs  keyring.rs  mod.rs
coffer-server/src/server/: mod.rs
docker/: Dockerfile
example/: README.md  config.toml  docker-compose.yml
example/client/: Dockerfile  client.cert  coffer-client
example/server/: Dockerfile  coffer-server  config.enc  server.cert
secsrv/: Cargo.toml
secsrv-client/: Cargo.toml
secsrv-client/src/: main.rs
secsrv-companion/: Cargo.toml
secsrv-companion/src/: main.rs
secsrv/src/: comm.rs  keymgmt.rs  keyring.rs  main.rs  secrets.rs
testcoffer/: client.cert  client1.cert  client2.cert  coffer.enc  coffer.yaml  no_keys_client.cert  server.cert
