[package]
name = "coffer-client"
version = "0.4.0"
authors = ["Armin Friedl <dev@friedl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Base tools
log = "0.4"
env_logger="0.7"
structopt = "0.3"
# Communication
serde_cbor = "0.10.2"
# Executing subcommand
exec = "0.3.1"
# Lighter alternative to tokio for
# driving shared frame creation
futures = "0.3.1"

coffer-common = { path = "../coffer-common" }