[package]
name = "coffer-companion"
version = "0.2.0"
authors = ["Armin Friedl <dev@friedl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Base tools
log = "0.4"
# Key management/Cryptography 
sodiumoxide = "0.2.5"
# Communication
serde = { version = "1.0", features = ["derive"]}
serde_cbor = "0.10.2"
serde_yaml = "0.8"
